Fix footer align

--- a/main/static/main/css/footer.css
+++ b/main/static/main/css/footer.css
@@ -23,6 +23,7 @@
     margin: 3em 0 0 0;
     font-size: 12px;
     color: #333;
+    clear: both;
 }
 
 .footer .django {
